--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 h1 {
 	font-size: 400%;
 	color: #000000;
-	font-family: 'Droid Serif';
+	font-family: 'Droid Serif', Georgia, serif;
 	font-style: italic;
 	font-weight: 400;
 }
